--- a/DualDoppler_Tornado_ERAD2024.ipynb
+++ b/DualDoppler_Tornado_ERAD2024.ipynb
@@ -5,9 +5,10 @@
    "id": "f7ab2a3f-87b1-4d64-9176-f01fbf1c99d6",
    "metadata": {},
    "source": [
-    "# MULTI DOPPLER ANALYSIS \n",
-    "## COURSE: Open Radar - Open Source Software Tools for Radar Data Processing \n",
-    "### ERAD - Rome, 9-13 September 2024"
+    "## MULTI DOPPLER ANALYSIS  \n",
+    "###  Open Radar-Open Source Software Tools for Radar Data Processing course - ERAD 2024\n",
+    "This is a short literature background of multi-Doppler retrievals for the Open Radar-Open Source Software Tools for Radar Data Processing course @ \n",
+    "the the 12th European conference on RADar in meteorology and hydrology (ERAD 2024) held in Rome, on September 2024."
    ]
   },
   {
@@ -30,7 +31,7 @@
    },
    "source": [
     "<figure>\n",
-    "  <img src=\"figuresDD/Fig1.png\" alt=\"Dual Doppler\" width=\"500\"/>\n",
+    "  <img src=\"Fig1.png\" alt=\"Dual Doppler\" width=\"500\"/>\n",
     "  <figcaption> Fig 1: Dual-Doppler Cartesian geometry from two radars. Adapted from Rauber and Nesbitt (2018).</figcaption>\n",
     "</figure>"
    ]
@@ -160,7 +161,7 @@
     "For this case and radar configuration, the baseline $b$ is 47.33 km, the farthest point is located at 94.66 km with a minimum resolution of 1.98 km. The lobes cover a total area of 13.30$^{3}$ km$^3$ and with only 0.61% of topography blockage (del Moral et al. 2020)\n",
     "\n",
     "<figure>\n",
-    "  <img src=\"figuresDD/Fig3.png\" alt=\"Dual Doppler\" width=\"250\"/> <img src=\"figuresDD/Fig4.png\" alt=\"Dual Doppler\" width=\"256\"/>\n",
+    "  <img src=\"figuresDD/x7_fextraa.png\" alt=\"Dual Doppler\" width=\"550\"/> <img src=\"figuresDD/x7_fextrab.png\" alt=\"Dual Doppler\" width=\"556\"/>\n",
     "  <figcaption> Fig 3: Dual-Doppler coverage for the CDV-PBE and CDV-LMI pairs of radars (in\n",
     "red). The 30° dual-lobe is shown in dotted black circles.</figcaption>\n",
     "</figure>\n"
@@ -190,7 +191,7 @@
     "Figure 5 shows the CDV radar reflectivity and radial velocity fields for the tornado on January 7, 2018, depicting a hook echo and a mesocyclone, respectively. This is the timestep we will analyse with SAMURAI.\n",
     "\n",
     " <figure>\n",
-    "  <img src=\"figuresDD/Fig6.png\" alt=\"Dual Doppler\" width=\"800\"/> \n",
+    "  <img src=\"figuresDD/TORNADO_0042_CDV.png\" alt=\"Dual Doppler\" width=\"800\"/> \n",
     "  <figcaption> Fig 5: (a) Reflectivity (dBZ) and (b) doppler velocity (m/s) for the supercell case on 7 January 2018 at 0042UTC and 2° elevation angle. </figcaption>\n",
     "</figure>"
    ]
