--- a/ERAD24/DD_Tornado_ERAD24.ipynb
+++ b/ERAD24/DD_Tornado_ERAD24.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "# MULTI DOPPLER ANALYSIS \n",
     "## COURSE: Open Radar - Open Source Software Tools for Radar Data Processing \n",
-    "### ERAD - Rome, 9-13 September 2024"
+    "### ERAD - Rome, 9-13 September 2024\n",
+    "\n",
+    "This notebook contains some high-level literature background for the multi-doppler analysis exercise at ERAD 2024."
    ]
   },
   {
@@ -30,7 +32,7 @@
    },
    "source": [
     "<figure>\n",
-    "  <img src=\"Fig2.png\" alt=\"Dual Doppler\" width=\"500\"/>\n",
+    "  <img src=\"Figures/Fig1.png\" alt=\"Dual Doppler\" width=\"500\"/>\n",
     "  <figcaption> Fig 1: Dual-Doppler Cartesian geometry from two radars. Adapted from Rauber and Nesbitt (2018).</figcaption>\n",
     "</figure>"
    ]
@@ -104,7 +106,7 @@
    "metadata": {},
    "source": [
     "<figure>\n",
-    "  <img src=\"x7_esquemalobes.png\" alt=\"Dual Doppler\" width=\"500\"/>\n",
+    "  <img src=\"Figures/Fig2.png\" alt=\"Dual Doppler\" width=\"500\"/>\n",
     "  <figcaption> Fig 2: Dual-Doppler configuration with beam crossing angle ($\\beta$), in black, and constant spatial resolution (s) for a beamwidht of 1.2° and a baseline b = 47.33 km. Adapted from (Davies-Jones, 1979)</figcaption>\n",
     "</figure>"
    ]
@@ -160,7 +162,7 @@
     "For this case and radar configuration, the baseline $b$ is 47.33 km, the farthest point is located at 94.66 km with a minimum resolution of 1.98 km. The lobes cover a total area of 13.30$^{3}$ km$^3$ and with only 0.61% of topography blockage (del Moral et al. 2020)\n",
     "\n",
     "<figure>\n",
-    "  <img src=\"x7_fextraa.png\" alt=\"Dual Doppler\" width=\"250\"/> <img src=\"x7_fextrab.png\" alt=\"Dual Doppler\" width=\"256\"/>\n",
+    "  <img src=\"Figures/Fig3.png\" alt=\"Dual Doppler\" width=\"450\"/> <img src=\"Figures/Fig4.png\" alt=\"Dual Doppler\" width=\"456\"/>\n",
     "  <figcaption> Fig 3: Dual-Doppler coverage for the CDV-PBE and CDV-LMI pairs of radars (in\n",
     "red). The 30° dual-lobe is shown in dotted black circles.</figcaption>\n",
     "</figure>\n"
@@ -177,7 +179,7 @@
     "The tornado in the central region of Catalonia was the result of a nocturnal supercell propagating NW and channeling through a narrow valley, and achieving speeds up tp 180 km/h with a 500 m diameter.\n",
     "\n",
     " <figure>\n",
-    "  <img src=\"fig3a_5_2.png\" alt=\"Dual Doppler\" width=\"500\"/> \n",
+    "  <img src=\"Figures/Fig5.png\" alt=\"Dual Doppler\" width=\"500\"/> \n",
     "  <figcaption> Fig 4: Track of the nocturnal winter storm that produced the tornado on Central Catalonia on 7 January 2018. Part of the 30° CDV-PBE pair dual lobes is depicted in the dotted lines. Dots indicate supercell centroid times labeled in UTC.</figcaption>\n",
     "</figure>"
    ]
@@ -190,7 +192,7 @@
     "Figure 5 shows the CDV radar reflectivity and radial velocity fields for the tornado on January 7, 2018, depicting a hook echo and a mesocyclone, respectively. This is the timestep we will analyse with SAMURAI.\n",
     "\n",
     " <figure>\n",
-    "  <img src=\"SIGMET_tornado.png\" alt=\"Dual Doppler\" width=\"800\"/> \n",
+    "  <img src=\"Figures/Fig6.png\" alt=\"Dual Doppler\" width=\"800\"/> \n",
     "  <figcaption> Fig 5: (a) Reflectivity (dBZ) and (b) doppler velocity (m/s) for the supercell case on 7 January 2018 at 0042UTC and 2° elevation angle. </figcaption>\n",
     "</figure>"
    ]
@@ -206,14 +208,6 @@
     "    \n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f415a850-8a7d-4efe-8c7c-3217634a40d1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
