--- a/ERAD24/DD_Tornado_ERAD24.ipynb
+++ b/ERAD24/DD_Tornado_ERAD24.ipynb
@@ -60,7 +60,7 @@
    "metadata": {},
    "source": [
     "### Dual Doppler coverage (2 radars)\n",
-    "<div class=\"alert alert-block alert-success\">\n",
+    "<div class=\"alert alert-block alert-info\">\n",
     "<b>Keep in mind:</b> The accuracy of our analysis (retrieving $u$,$v$, and $w$) is strongly dependent on geometric configuration and radar spatial resolution.\n",
     "</div>"
    ]
@@ -89,8 +89,8 @@
    "id": "ab3798c0-46a6-44ec-9aa1-b4c6befabba1",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b> </b> The dual lobes define the points on which the beams of both radars intersect at an angle $\\beta$, and where equal values of the geometric error of the horizontal wind field fall. \n",
+    "<div class=\"alert alert-block alert-info\">\n",
+    "<b> Note:</b> The dual lobes define the points on which the beams of both radars intersect at an angle $\\beta$, and where equal values of the geometric error of the horizontal wind field fall. \n",
     "</div>\n",
     "Literature demonstrates that $\\beta$=30º is one of the most suitable ones (e.g. Davies-Jones, 1979; Lhermitt and Miller, 1970; Friedrich and Hagen, 2004). This  keeps the horizontal wind error below 3 m/s ($\\sigma^{2}_u$ and $\\sigma^{2}_v$) in convective situations*.\n",
     "The dual lobes centers are located perpendicular to the bisection of the baseline ($b$). The baseline is the distance separating the two radars (Fig. 2). \n",
@@ -140,8 +140,8 @@
    "id": "bfacdf5a-011a-4da8-933b-ff1588d27162",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b> </b> To retrieve the best wind estimates, there must exist a compromise between the area that we can cover with the optimum dual-lobe and the area in which we can correctly solve the thunderstorms because of the resolution. This constitutes the intersection of both areas and depends on the radar beam width and the maximum resolution desired.\n",
+    "<div class=\"alert alert-block alert-info\">\n",
+    "<b> Note: </b> To retrieve the best wind estimates, there must exist a compromise between the area that we can cover with the optimum dual-lobe and the area in which we can correctly solve the thunderstorms because of the resolution. This constitutes the intersection of both areas and depends on the radar beam width and the maximum resolution desired.\n",
     "</div>\n"
    ]
   },
@@ -154,11 +154,12 @@
     " \n",
     " #### Dual Doppler coverage in Catalonia\n",
     " \n",
-    "The XRAD (Xarxa de RADars Meteorològics de Catalunya) is the radar network of the Meteorological Service of Catalonia (NE of Spain). The network is formed by four C-band single-Doppler radar, covering an area of XXX km$^{2}$ with complex terrain.\n",
+    "The XRAD (Xarxa de RADars) is the radar network of the Meteorological Service of Catalonia (NE of Spain). The network is formed by four C-band single-Doppler radars, covering an area of ~ 28,114 km$^{2}$ with complex terrain.\n",
     "\n",
-    "Del Moral 2020 explores the possible dual-Doppler coverage for the opperational XRAD network, and established that with a maximum resolution of 2 km at the farthest point, and with 320deg dual-lobes, CDV-PBE and CDV-LMI are the two most suitable pairs of radars for dual-Doppler analysis.\n",
+    "del Moral Méndez 2020, and del Moral Méndez et al., 2020 explore the possible dual-Doppler coverage for the operational XRAD network and establish that with a maximum resolution of 2 km at the farthest point, and with 320deg dual-lobes, CDV-PBE and CDV-LMI are the two most suitable pairs of radars for dual-Doppler analysis.\n",
     "\n",
-    "The two radars selected to analyse the tornado case are CDV-PBE, and the coverage  is represeted in Fig. 3 (right). Notice that the \"optimal area\" is the intersection of the desired dual-lobe and the optimal resolution area. In this case, these two are the same.\n",
+    "The two radars selected to analyse the tornado case are CDV-PBE, and the coverage  is represeted in Fig. 3 (right). Notice that the \"optimal area\" is the intersection of the desired dual-lobe and the optimal resolution area. \n",
+    "In this case, these two are the same.\n",
     "For this case and radar configuration, the baseline $b$ is 47.33 km, the farthest point is located at 94.66 km with a minimum resolution of 1.98 km. The lobes cover a total area of 13.30$^{3}$ km$^3$ and with only 0.61% of topography blockage (del Moral et al. 2020)\n",
     "\n",
     "<figure>\n",
@@ -176,7 +177,7 @@
     " #### Tornado track \n",
     "The severe weather event on 6-7 January 2018 occurred outside the convective season in the northwestern Mediterranean.\n",
     "Several rain bands with a predominant southeasterly flow affected the area. Within those bands, embedded convective cells produced severe weather, causing two significant tornadoes, both rated EF2.\n",
-    "The tornado in the central region of Catalonia was the result of a nocturnal supercell propagating NW and channeling through a narrow valley, and achieving speeds up tp 180 km/h with a 500 m diameter.\n",
+    "The tornado in the central region of Catalonia was the result of a nocturnal supercell propagating NW and channeling through a narrow valley, and achieving speeds up to 180 km/h with a 500 m diameter.\n",
     "\n",
     " <figure>\n",
     "  <img src=\"Figures/Fig5.png\" alt=\"Dual Doppler\" width=\"500\"/> \n",
@@ -202,8 +203,20 @@
    "id": "b29b25db-ecc6-4b99-80a2-6f967968087b",
    "metadata": {},
    "source": [
-    "### Refernces and further reading:\n",
-    "-\n",
+    "### References:\n",
+    "-Armijo, L., 1967. A theory for the determination of wind and precipitation velocities with Doppler radars (Vol. 35). Institutes for Environmental Research, National Severe Storms Laboratory.\n",
+    "- Davies-Jones, R.P., 1979. Dual-Doppler radar coverage area as a function of measurement accuracy and spatial resolution. Journal of Applied Meteorology (1962-1982), pp.1229-1233.\n",
+    "- del Moral Méndez, A., 2020. Radar-based nowcasting of severe thunderstorms: A better understanding of the dynamical influence of complex topography and the sea.\n",
+    "- del Moral Méndez, A.D., Weckwerth, T.M., Rigo, T., Bell, M.M. and Llasat Botija, M.D.C., 2020. C-Band Dual-Doppler Retrievals in Complex Terrain: Improving the Knowledge of Severe Storm Dynamics in Catalonia. Remote Sensing, 2020, vol. 12, num. 18, p. 2930.\n",
+    "- Friedrich, K. and Hagen, M., 2004. On the use of advanced Doppler radar techniques to determine horizontal wind fields for operational weather surveillance. Meteorological Applications, 11(2), pp.155-171\n",
+    "- Lhermitte, R.M. and Miller, L.J., 1970. Doppler radar methodology for the observation of convective storms.\n",
+    "- Miller, L.J. and Strauch, R.G., 1974. A dual Doppler radar method for the determination of wind velocities within precipitating weather systems. Remote Sensing of Environment, 3(4), pp.219-235.\n",
+    "- Rauber, R.M. and Nesbitt, S.W., 2018. Radar meteorology: A first course. John Wiley & Sons\n",
+    "- Ray, P.S. and Sangren, K.L., 1983. Multiple-Doppler radar network design. Journal of climate and applied meteorology, pp.1444-1454.\n",
+    "- Ray, P.S. and Wagner, K.K., 1976. Multiple Doppler radar observations of storms. Geophysical Research Letters, 3(3), pp.189-191.\n",
+    "\n",
+    "\n",
+    "\n",
     "    \n",
     "    \n",
     "    "
