--- a/ERAD24/DD_Tornado_ERAD24.ipynb
+++ b/ERAD24/DD_Tornado_ERAD24.ipynb
@@ -207,7 +207,7 @@
     "-Armijo, L., 1967. A theory for the determination of wind and precipitation velocities with Doppler radars (Vol. 35). Institutes for Environmental Research, National Severe Storms Laboratory.\n",
     "- Davies-Jones, R.P., 1979. Dual-Doppler radar coverage area as a function of measurement accuracy and spatial resolution. Journal of Applied Meteorology (1962-1982), pp.1229-1233.\n",
     "- del Moral Méndez, A., 2020. Radar-based nowcasting of severe thunderstorms: A better understanding of the dynamical influence of complex topography and the sea.\n",
-    "- del Moral Méndez, A.D., Weckwerth, T.M., Rigo, T., Bell, M.M. and Llasat Botija, M.D.C., 2020. C-Band Dual-Doppler Retrievals in Complex Terrain: Improving the Knowledge of Severe Storm Dynamics in Catalonia. Remote Sensing, 2020, vol. 12, num. 18, p. 2930.\n",
+    "- del Moral Méndez, A., Weckwerth, T.M., Rigo, T., Bell, M.M. and Llasat Botija, M.D.C., 2020. C-Band Dual-Doppler Retrievals in Complex Terrain: Improving the Knowledge of Severe Storm Dynamics in Catalonia. Remote Sensing, 2020, vol. 12, num. 18, p. 2930.\n",
     "- Friedrich, K. and Hagen, M., 2004. On the use of advanced Doppler radar techniques to determine horizontal wind fields for operational weather surveillance. Meteorological Applications, 11(2), pp.155-171\n",
     "- Lhermitte, R.M. and Miller, L.J., 1970. Doppler radar methodology for the observation of convective storms.\n",
     "- Miller, L.J. and Strauch, R.G., 1974. A dual Doppler radar method for the determination of wind velocities within precipitating weather systems. Remote Sensing of Environment, 3(4), pp.219-235.\n",
